--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site settings
-title: 读立写生
+title: 我书我心
 header-img: "img/facebook.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "肖飞|人生不息·折腾不止"  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://xofi"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
-  bio: "写就是写的报酬"
+  name: " xofi"
+  email: xofi@qq.com
+  bio: "我书写我心"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
 favicon: img/favicon.png
 
-douban_username:  cnfeat
-twitter_username: feat
-github_username: cnfeat
+douban_username:  xofi
+twitter_username: xofi3
+github_username: xofi
 facebook_username: 
-weibo_username: cnfeat 
-zhihu_username: feat
+weibo_username: xofi 
+zhihu_username: fei-xiao-82
 
 # Build settings  
 # use Github Flavored Markdown !important  
@@ -44,16 +44,16 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "CnFeat"
+      author: "xofi"
       header-img: "img/facebook.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
   provider : duoshuo
   duoshuo :
-    short_name : cnfeat
+    short_name : xofi
   disqus :
-      short_name : cnfeat
+      short_name : xofi
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: 
