--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ zhihu_username: fei-xiao-82
 # document: http://jekyllrb.com/docs/configuration/#kramdown  
 markdown: kramdown
 highlighter: pygments
-permalink: pretty
+#permalink: pretty
 paginate: 8
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 relative_permalinks: true
